# openblob

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bubble-dev.html  bubble-subtitle.html  bubble.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  quick-menu.html  snip-overlay.html  snip-panel.html  speech.html  timer-overlay.html  transcript.html  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
blob_connectors/: .env.example  .gitignore  README.md  base.py  requirements.txt  run.py
blob_connectors/connectors/: discord_connector.py  email.py  slack.py  telegram.py
docs/: architecture.md  design.md  documentation.md  roadmap.md
docs/proposals/: memory-system.md
src/: App.tsx  bubble-dev.tsx  bubble.tsx  index.css  openBubbleWindow.ts  openSnipOverlay.ts  openSnipPanel.ts  snip-overlay.css  snip-overlay.tsx  snip-panel.tsx
src-tauri/: 2  Cargo.toml  openblob - Verknüpfung.lnk  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: netflix_titles.json
src-tauri/models/: en_US-lessac-high.onnx.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/app/: command_pipeline.rs  fallback.rs  mod.rs  types.rs
src-tauri/src/core/capabilities/: action_mapper.rs  mod.rs  registry.rs  types.rs
src-tauri/src/core/executor/: execute.rs  mod.rs  result.rs
src-tauri/src/core/legacy/: app_open_runtime.rs  browser_runtime.rs  input_runtime.rs  memory_runtime.rs  mod.rs  ollama_text_runtime.rs  snip_runtime.rs  streaming_runtime.rs  system_media_runtime.rs  voice_command_executor.rs  weather_runtime.rs
src-tauri/src/core/permissions/: mod.rs  policy.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/i18n/commands/: de.json  en.json
src-tauri/src/modules/: _____command_router old.rs  app_profiles.rs  browser_automations.rs  command_router.rs  context.rs  context_resolver.rs  mod.rs  screen_capture.rs  session_memory.rs  snip_session.rs  steam_games.rs  streaming.rs  system.rs  voice.rs  wake_word.rs  windows_discovery.rs
src-tauri/src/modules/command_router/: constants.rs  extract.rs  fuzzy.rs  intents.rs  media.rs  mod.rs  normalize.rs  parser.rs  types.rs  utilities.rs
src-tauri/src/modules/companion/: bonding.rs  mod.rs  personality.rs
src-tauri/src/modules/i18n/: command_locale.rs  mod.rs  replies.rs
src-tauri/src/modules/i18n/replies/: de.json  en.json
src-tauri/src/modules/memory/: context.rs  embeddings.rs  episodic_memory.rs  events.rs  extraction.rs  facts.rs  import.rs  management.rs  mod.rs  reflection.rs  retention.rs  semantic_memory.rs  sqlite_store.rs  writer.rs
src-tauri/src/modules/profile/: companion_config.rs  mod.rs  onboarding_state.rs  user_profile.rs
src-tauri/src/modules/snippets/: mod.rs
src-tauri/src/modules/storage/: json_store.rs  mod.rs  paths.rs
src-tauri/src/modules/transcript/: audio_capture.rs  mod.rs  processor.rs  runtime.rs  session.rs  setup.rs  summary.rs  transcript_engine.rs  transcript_store.rs  types.rs
src-tauri/src/modules/tts/: kokoro.rs  manager.rs  mod.rs  piper.rs  setup.rs  tts_config.rs
src/windows/: window-pinning.ts
src/windows/bubble/: app.tsx  main.tsx  open.ts
src/windows/bubble-dev/: app.tsx  open.ts
src/windows/bubble-subtitle/: app.tsx  open.ts
src/windows/quick-menu/: app.tsx  open.ts
src/windows/snip-overlay/: app.tsx  open.ts  snip-overlay.css
src/windows/snip-panel/: app.tsx  open.ts
src/windows/timer-overlay/: app.tsx  open.ts
src/windows/transcript/: app.tsx  open.ts
voice/models/wake-word/: README.md
