[package]
name = "openblob"
version = "0.1.0"
edition = "2021"

[lib]
name = "companion_v1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
enigo = "0.2"
device_query = "2"
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
urlencoding = "2"
winreg = "0.52"
strsim = "0.11"
walkdir = "2.5"
tokio = { version = "1", features = ["rt", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
screenshots = "0.8"
image = "0.25"
chrono = "0.4"
tauri-plugin-opener = "2"
once_cell = "1"

windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse"
] }
