[package]
name = "openblob"
version = "0.1.0"
edition = "2021"

[lib]
name = "companion_v1_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.9"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
enigo = "0.2"
device_query = "2"
cpal = "0.15"
hound = "3.5"
base64 = "0.22"
tempfile ="3"
urlencoding = "2"
uuid = { version = "1", features = ["v7", "serde"] }
winreg = "0.52"
strsim = "0.11"
walkdir = "2.5"
tokio = { version = "1", features = ["rt", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
screenshots = "0.8"
image = "0.25"
chrono = "0.4"
tauri-plugin-opener = "2"
once_cell = "1"
rand = "0.8"
window-vibrancy = "0.7"
crossbeam-channel = "0.5"
anyhow = "1"
thiserror = "2"
bytemuck = "1"
axum = "0.7"


windows = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_System",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_Security",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Shutdown",
  "Win32_System_ProcessStatus"
] }
